2008-02-07  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs: Only add
	the separator to the add to playlist menu if there are actually playlists
	that can be added to; remove the playlist map and pass the source through
	the .Data property of the object

2008-02-07  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.ServiceStack/DBusServiceManager.cs:
	Comment out super-verbose logging.

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/AlbumListView.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ArtistListView.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs: Sweet little
	patch that disconnects the [shift]ctrl-a keybindings while focused in the
	Artist and Album views.

2008-02-07  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/SourceActions.cs: Fix bugs with
	source actions being out of sync with what's highlighted/active.  Open
	Editor for smart playlists when OnSourceProperties.

	* src/Core/Banshee.ThickClient/Banshee.SmartPlaylist.Gui/Editor.cs: If
	given a smart playlist, set the Hyena.Query.Gui condition.

	* src/Core/Hyena.Gui/Hyena.Query.Gui/QueryTermBox.cs: 
	* src/Core/Hyena.Gui/Hyena.Query.Gui/QueryBox.cs: Add a QueryNode setter
	so can initialize with an existing query/smart playlist.

2008-02-07  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Nereid/Nereid/PlayerInterface.cs: Fix bug that prevented using
	keybindings while in the search entry.

2008-02-07  Aaron Bockover  <abock@gnome.org>

	* src/Core/Hyena.Gui/Hyena.Gui.Dialogs/ExceptionDialog.cs: Use 
	AppendFormat instead of allocating a bunch of separate strings; added
	a platform check to skip collecting kernel, distro, and LSB information
	if the platform is not Unix; added some exception handling when gathering
	this information just in case

2008-02-07  Aaron Bockover  <abock@gnome.org>
